--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "homepage": "https://github.com/Tolulope05/YelpCamp#readme",
   "dependencies": {
     "ejs": "^3.1.7",
-    "ejs-mate": "^3.0.0",
+    "ejs-mate": "^4.0.0",
     "express": "^4.18.1",
+    "express-session": "^1.17.2",
     "joi": "^17.6.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.3.2"
