--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Tolulope05/YelpCamp#readme",
   "dependencies": {
+    "cloudinary": "^1.29.1",
     "connect-flash": "^0.1.1",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.7",
@@ -28,6 +29,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.3.2",
     "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.0.0"
